--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,115 +5,116 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-5.91MB/s(Youtube:不良林), server: hnyd.52147.top, port: 30120, type: trojan, password: d19e6167-09b4-431b-803b-77556c7f0aba, sni: hnyd.52147.top, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-5.29MB/s(Youtube:不良林), server: v20.emovpn.xyz, port: 1256, type: vmess, uuid: 4a3ad34e-a12c-4e72-8fcb-47accba9e218, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: v20.emovpn.xyz}}
+  - {name: 🇯🇵 日本-215.2KB/s(Youtube:不良林), server: 89.31.126.171, port: 800, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
   - {name: 🇸🇬 新加坡-163.8KB/s(Youtube:不良林), server: s4.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s4.hazz.win, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-444.5KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 33002, type: vmess, uuid: 177501cc-f0c2-3cc3-b9a7-8c1e8e27655f, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇨🇦 加拿大-2.93MB/s(Youtube:不良林), server: 134.195.196.128, port: 7002, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
-  - {name: 🇨🇦 加拿大-2.82MB/s(Youtube:不良林), server: 134.195.196.128, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
-  - {name: 🇯🇵 日本-5.19MB/s(Youtube:不良林), server: jgwdb1.gaox.ml, port: 443, type: trojan, password: a580d839-ee41-4df1-bf03-6789dca32e30, sni: jgwdb1.gaox.ml, skip-cert-verify: true}
-  - {name: 🇨🇦 加拿大-2.70MB/s(Youtube:不良林), server: 134.195.196.128, port: 9102, type: ss, cipher: aes-256-gcm, password: e4FCWrgpkji3QY}
+  - {name: 🇺🇸 美国-620.9KB/s(Youtube:不良林), server: 92.38.176.81, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇦🇺 澳大利亚-2.54MB/s(Youtube:不良林), server: 185.167.116.250, port: 9043, type: ss, cipher: aes-256-cfb, password: HSZuyJQcWe8dxNdF}
+  - {name: 🇨🇳 中国-276.3KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 33009, type: vmess, uuid: 177501cc-f0c2-3cc3-b9a7-8c1e8e27655f, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true}
   - {name: 🇭🇰 香港-336.8KB/s(Youtube:不良林), server: 148.66.56.99, port: 801, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
   - {name: 🇦🇺 澳大利亚-2.45MB/s(Youtube:不良林), server: 185.167.116.250, port: 9006, type: ss, cipher: aes-256-cfb, password: FAdUvMJUq5vDgKEq}
+  - {name: 🇭🇰 香港-19.53MB/s(Youtube:不良林), server: hkaz4.xmrth-node.xyz, port: 15380, type: vmess, uuid: 30670cc5-0160-3ec8-98d5-606237ec5169, alterId: 2, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /index, ws-headers: {Host: hkaz4.xmrth-node.xyz}}
+  - {name: 🇺🇸 美国-305.8KB/s(Youtube:不良林), server: tj-us02.yiyodns.xyz, port: 443, type: trojan, password: 7dafe71e-2be6-302f-bdfc-e6319a3299bc, sni: tj-us02.yiyodns.xyz, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-480.9KB/s(Youtube:不良林), server: jgwdj4.gaox.ml, port: 443, type: trojan, password: c09eb137-bf68-4658-84e0-102d94b74168, sni: jgwdj4.gaox.ml, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-5.91MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.29MB/s(Youtube:不良林)
+      - 🇯🇵 日本-215.2KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-163.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-444.5KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.93MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.82MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.19MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.70MB/s(Youtube:不良林)
+      - 🇺🇸 美国-620.9KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.54MB/s(Youtube:不良林)
+      - 🇨🇳 中国-276.3KB/s(Youtube:不良林)
       - 🇭🇰 香港-336.8KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.45MB/s(Youtube:不良林)
+      - 🇭🇰 香港-19.53MB/s(Youtube:不良林)
+      - 🇺🇸 美国-305.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-480.9KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-5.91MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.29MB/s(Youtube:不良林)
+      - 🇯🇵 日本-215.2KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-163.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-444.5KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.93MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.82MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.19MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.70MB/s(Youtube:不良林)
+      - 🇺🇸 美国-620.9KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.54MB/s(Youtube:不良林)
+      - 🇨🇳 中国-276.3KB/s(Youtube:不良林)
       - 🇭🇰 香港-336.8KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.45MB/s(Youtube:不良林)
+      - 🇭🇰 香港-19.53MB/s(Youtube:不良林)
+      - 🇺🇸 美国-305.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-480.9KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-5.91MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.29MB/s(Youtube:不良林)
+      - 🇯🇵 日本-215.2KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-163.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-444.5KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.93MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.82MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.19MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.70MB/s(Youtube:不良林)
+      - 🇺🇸 美国-620.9KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.54MB/s(Youtube:不良林)
+      - 🇨🇳 中国-276.3KB/s(Youtube:不良林)
       - 🇭🇰 香港-336.8KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.45MB/s(Youtube:不良林)
+      - 🇭🇰 香港-19.53MB/s(Youtube:不良林)
+      - 🇺🇸 美国-305.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-480.9KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
       - 🇭🇰 香港-336.8KB/s(Youtube:不良林)
+      - 🇭🇰 香港-19.53MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-5.91MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.29MB/s(Youtube:不良林)
+      - 🇯🇵 日本-215.2KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-163.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-444.5KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.93MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.82MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.19MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.70MB/s(Youtube:不良林)
+      - 🇺🇸 美国-620.9KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.54MB/s(Youtube:不良林)
+      - 🇨🇳 中国-276.3KB/s(Youtube:不良林)
       - 🇭🇰 香港-336.8KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.45MB/s(Youtube:不良林)
+      - 🇭🇰 香港-19.53MB/s(Youtube:不良林)
+      - 🇺🇸 美国-305.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-480.9KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-5.91MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.29MB/s(Youtube:不良林)
+      - 🇯🇵 日本-215.2KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-163.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-444.5KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.93MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.82MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.19MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.70MB/s(Youtube:不良林)
+      - 🇺🇸 美国-620.9KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.54MB/s(Youtube:不良林)
+      - 🇨🇳 中国-276.3KB/s(Youtube:不良林)
       - 🇭🇰 香港-336.8KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.45MB/s(Youtube:不良林)
+      - 🇭🇰 香港-19.53MB/s(Youtube:不良林)
+      - 🇺🇸 美国-305.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-480.9KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-5.91MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.29MB/s(Youtube:不良林)
+      - 🇯🇵 日本-215.2KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-163.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-444.5KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.93MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.82MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.19MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.70MB/s(Youtube:不良林)
+      - 🇺🇸 美国-620.9KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.54MB/s(Youtube:不良林)
+      - 🇨🇳 中国-276.3KB/s(Youtube:不良林)
       - 🇭🇰 香港-336.8KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.45MB/s(Youtube:不良林)
+      - 🇭🇰 香港-19.53MB/s(Youtube:不良林)
+      - 🇺🇸 美国-305.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-480.9KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +130,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-5.91MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.29MB/s(Youtube:不良林)
+      - 🇯🇵 日本-215.2KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-163.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-444.5KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.93MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.82MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.19MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.70MB/s(Youtube:不良林)
+      - 🇺🇸 美国-620.9KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.54MB/s(Youtube:不良林)
+      - 🇨🇳 中国-276.3KB/s(Youtube:不良林)
       - 🇭🇰 香港-336.8KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.45MB/s(Youtube:不良林)
+      - 🇭🇰 香港-19.53MB/s(Youtube:不良林)
+      - 🇺🇸 美国-305.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-480.9KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
