--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,116 +5,114 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇷🇺 俄罗斯联邦-257.9KB/s(Youtube:不良林), server: 185.4.65.6, port: 21247, type: ss, cipher: aes-256-cfb, password: vDS9G2p}
-  - {name: 🇸🇬 新加坡-159.8KB/s(Youtube:不良林), server: s1.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s1.hazz.win, skip-cert-verify: true}
+  - {name: 🇦🇺 澳大利亚-1.78MB/s(Youtube:不良林), server: 185.167.116.250, port: 9006, type: ss, cipher: aes-256-cfb, password: FAdUvMJUq5vDgKEq}
+  - {name: 🇨🇳 中国-1.52MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
   - {name: 🇺🇸 美国-5.93MB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
-  - {name: 🇨🇦 加拿大-2.26MB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇭🇰 香港-336.8KB/s(Youtube:不良林), server: 148.66.56.99, port: 801, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇭🇰 香港-19.53MB/s(Youtube:不良林), server: hkaz4.xmrth-node.xyz, port: 15380, type: vmess, uuid: 30670cc5-0160-3ec8-98d5-606237ec5169, alterId: 2, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /index, ws-headers: {Host: hkaz4.xmrth-node.xyz}}
-  - {name: 🇰🇷 韩国-305.8KB/s(Youtube:不良林), server: tj-us02.yiyodns.xyz, port: 443, type: trojan, password: 7dafe71e-2be6-302f-bdfc-e6319a3299bc, sni: tj-us02.yiyodns.xyz, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-480.9KB/s(Youtube:不良林), server: jgwdj4.gaox.ml, port: 443, type: trojan, password: c09eb137-bf68-4658-84e0-102d94b74168, sni: jgwdj4.gaox.ml, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-332.5KB/s(Youtube:不良林), server: 159.27.90.254, port: 63087, type: vmess, uuid: 352ba93c-fd92-3055-ad10-b3599ff2802f, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /mugua, ws-headers: {Host: 159.27.90.254}}
+  - {name: 🇩🇪 德国-3.07MB/s(Youtube:不良林), server: mosaic.marythunt.xyz, port: 443, type: trojan, password: !<str> 372815193, sni: mosaic.marythunt.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-503.2KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 33003, type: vmess, uuid: 177501cc-f0c2-3cc3-b9a7-8c1e8e27655f, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true}
   - {name: 🇬🇧 英国-3.38MB/s(Youtube:不良林), server: 144.24.88.101, port: 16833, type: vmess, uuid: f5425ccf-3946-4fb4-eb24-5393d78a392f, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇫🇷 法国-1.43MB/s(Youtube:不良林), server: 51.38.118.42, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇸🇬 新加坡-555.1KB/s(Youtube:不良林), server: 165.232.169.142, port: 29332, type: ss, cipher: aes-256-cfb, password: 1e5111699c45496da84112f35db665c4}
+  - {name: 🇺🇸 美国-1.83MB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇨🇳 中国-4.37MB/s(Youtube:不良林), server: 116.129.254.65, port: 63078, type: vmess, uuid: 352ba93c-fd92-3055-ad10-b3599ff2802f, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 116.129.254.65}}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇷🇺 俄罗斯联邦-257.9KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-159.8KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.78MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.52MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.93MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.26MB/s(Youtube:不良林)
-      - 🇭🇰 香港-336.8KB/s(Youtube:不良林)
-      - 🇭🇰 香港-19.53MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-305.8KB/s(Youtube:不良林)
-      - 🇯🇵 日本-480.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-332.5KB/s(Youtube:不良林)
+      - 🇩🇪 德国-3.07MB/s(Youtube:不良林)
+      - 🇨🇳 中国-503.2KB/s(Youtube:不良林)
       - 🇬🇧 英国-3.38MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.43MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-555.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.83MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.37MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇷🇺 俄罗斯联邦-257.9KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-159.8KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.78MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.52MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.93MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.26MB/s(Youtube:不良林)
-      - 🇭🇰 香港-336.8KB/s(Youtube:不良林)
-      - 🇭🇰 香港-19.53MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-305.8KB/s(Youtube:不良林)
-      - 🇯🇵 日本-480.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-332.5KB/s(Youtube:不良林)
+      - 🇩🇪 德国-3.07MB/s(Youtube:不良林)
+      - 🇨🇳 中国-503.2KB/s(Youtube:不良林)
       - 🇬🇧 英国-3.38MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.43MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-555.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.83MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.37MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇷🇺 俄罗斯联邦-257.9KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-159.8KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.78MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.52MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.93MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.26MB/s(Youtube:不良林)
-      - 🇭🇰 香港-336.8KB/s(Youtube:不良林)
-      - 🇭🇰 香港-19.53MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-305.8KB/s(Youtube:不良林)
-      - 🇯🇵 日本-480.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-332.5KB/s(Youtube:不良林)
+      - 🇩🇪 德国-3.07MB/s(Youtube:不良林)
+      - 🇨🇳 中国-503.2KB/s(Youtube:不良林)
       - 🇬🇧 英国-3.38MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.43MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-555.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.83MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.37MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 香港-336.8KB/s(Youtube:不良林)
-      - 🇭🇰 香港-19.53MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇷🇺 俄罗斯联邦-257.9KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-159.8KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.78MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.52MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.93MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.26MB/s(Youtube:不良林)
-      - 🇭🇰 香港-336.8KB/s(Youtube:不良林)
-      - 🇭🇰 香港-19.53MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-305.8KB/s(Youtube:不良林)
-      - 🇯🇵 日本-480.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-332.5KB/s(Youtube:不良林)
+      - 🇩🇪 德国-3.07MB/s(Youtube:不良林)
+      - 🇨🇳 中国-503.2KB/s(Youtube:不良林)
       - 🇬🇧 英国-3.38MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.43MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-555.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.83MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.37MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇷🇺 俄罗斯联邦-257.9KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-159.8KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.78MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.52MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.93MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.26MB/s(Youtube:不良林)
-      - 🇭🇰 香港-336.8KB/s(Youtube:不良林)
-      - 🇭🇰 香港-19.53MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-305.8KB/s(Youtube:不良林)
-      - 🇯🇵 日本-480.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-332.5KB/s(Youtube:不良林)
+      - 🇩🇪 德国-3.07MB/s(Youtube:不良林)
+      - 🇨🇳 中国-503.2KB/s(Youtube:不良林)
       - 🇬🇧 英国-3.38MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.43MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-555.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.83MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.37MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇷🇺 俄罗斯联邦-257.9KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-159.8KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.78MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.52MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.93MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.26MB/s(Youtube:不良林)
-      - 🇭🇰 香港-336.8KB/s(Youtube:不良林)
-      - 🇭🇰 香港-19.53MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-305.8KB/s(Youtube:不良林)
-      - 🇯🇵 日本-480.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-332.5KB/s(Youtube:不良林)
+      - 🇩🇪 德国-3.07MB/s(Youtube:不良林)
+      - 🇨🇳 中国-503.2KB/s(Youtube:不良林)
       - 🇬🇧 英国-3.38MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.43MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-555.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.83MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.37MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -130,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇷🇺 俄罗斯联邦-257.9KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-159.8KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.78MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.52MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.93MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.26MB/s(Youtube:不良林)
-      - 🇭🇰 香港-336.8KB/s(Youtube:不良林)
-      - 🇭🇰 香港-19.53MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-305.8KB/s(Youtube:不良林)
-      - 🇯🇵 日本-480.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-332.5KB/s(Youtube:不良林)
+      - 🇩🇪 德国-3.07MB/s(Youtube:不良林)
+      - 🇨🇳 中国-503.2KB/s(Youtube:不良林)
       - 🇬🇧 英国-3.38MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.43MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-555.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.83MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.37MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
