--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇦🇺 澳大利亚-1.78MB/s(Youtube:不良林), server: 185.167.116.250, port: 9006, type: ss, cipher: aes-256-cfb, password: FAdUvMJUq5vDgKEq}
-  - {name: 🇨🇳 中国-1.52MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-5.93MB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
-  - {name: 🇩🇪 德国-3.07MB/s(Youtube:不良林), server: mosaic.marythunt.xyz, port: 443, type: trojan, password: !<str> 372815193, sni: mosaic.marythunt.xyz, skip-cert-verify: true}
   - {name: 🇨🇳 中国-503.2KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 33003, type: vmess, uuid: 177501cc-f0c2-3cc3-b9a7-8c1e8e27655f, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇬🇧 英国-3.38MB/s(Youtube:不良林), server: 144.24.88.101, port: 16833, type: vmess, uuid: f5425ccf-3946-4fb4-eb24-5393d78a392f, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-413.5KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 33009, type: vmess, uuid: 177501cc-f0c2-3cc3-b9a7-8c1e8e27655f, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-327.9KB/s(Youtube:不良林), server: v20.emovpn.xyz, port: 1256, type: vmess, uuid: 4a3ad34e-a12c-4e72-8fcb-47accba9e218, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: v20.emovpn.xyz}}
+  - {name: 🇺🇸 美国-2.33MB/s(Youtube:不良林), server: s2.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s2.hazz.win, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-428.9KB/s(Youtube:不良林), server: 92.38.176.81, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
   - {name: 🇫🇷 法国-1.43MB/s(Youtube:不良林), server: 51.38.118.42, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
   - {name: 🇸🇬 新加坡-555.1KB/s(Youtube:不良林), server: 165.232.169.142, port: 29332, type: ss, cipher: aes-256-cfb, password: 1e5111699c45496da84112f35db665c4}
   - {name: 🇺🇸 美国-1.83MB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
   - {name: 🇨🇳 中国-4.37MB/s(Youtube:不良林), server: 116.129.254.65, port: 63078, type: vmess, uuid: 352ba93c-fd92-3055-ad10-b3599ff2802f, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 116.129.254.65}}
+  - {name: 塞浦路斯-451.4KB/s(Youtube:不良林), server: 213.169.137.221, port: 989, type: ss, cipher: aes-256-cfb, password: f8f7aCzcPKbsF8p3}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇦🇺 澳大利亚-1.78MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.52MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.93MB/s(Youtube:不良林)
-      - 🇩🇪 德国-3.07MB/s(Youtube:不良林)
       - 🇨🇳 中国-503.2KB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.38MB/s(Youtube:不良林)
+      - 🇨🇳 中国-413.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-327.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.33MB/s(Youtube:不良林)
+      - 🇺🇸 美国-428.9KB/s(Youtube:不良林)
       - 🇫🇷 法国-1.43MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-555.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.83MB/s(Youtube:不良林)
       - 🇨🇳 中国-4.37MB/s(Youtube:不良林)
+      - 塞浦路斯-451.4KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇦🇺 澳大利亚-1.78MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.52MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.93MB/s(Youtube:不良林)
-      - 🇩🇪 德国-3.07MB/s(Youtube:不良林)
       - 🇨🇳 中国-503.2KB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.38MB/s(Youtube:不良林)
+      - 🇨🇳 中国-413.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-327.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.33MB/s(Youtube:不良林)
+      - 🇺🇸 美国-428.9KB/s(Youtube:不良林)
       - 🇫🇷 法国-1.43MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-555.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.83MB/s(Youtube:不良林)
       - 🇨🇳 中国-4.37MB/s(Youtube:不良林)
+      - 塞浦路斯-451.4KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇦🇺 澳大利亚-1.78MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.52MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.93MB/s(Youtube:不良林)
-      - 🇩🇪 德国-3.07MB/s(Youtube:不良林)
       - 🇨🇳 中国-503.2KB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.38MB/s(Youtube:不良林)
+      - 🇨🇳 中国-413.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-327.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.33MB/s(Youtube:不良林)
+      - 🇺🇸 美国-428.9KB/s(Youtube:不良林)
       - 🇫🇷 法国-1.43MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-555.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.83MB/s(Youtube:不良林)
       - 🇨🇳 中国-4.37MB/s(Youtube:不良林)
+      - 塞浦路斯-451.4KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇦🇺 澳大利亚-1.78MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.52MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.93MB/s(Youtube:不良林)
-      - 🇩🇪 德国-3.07MB/s(Youtube:不良林)
       - 🇨🇳 中国-503.2KB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.38MB/s(Youtube:不良林)
+      - 🇨🇳 中国-413.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-327.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.33MB/s(Youtube:不良林)
+      - 🇺🇸 美国-428.9KB/s(Youtube:不良林)
       - 🇫🇷 法国-1.43MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-555.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.83MB/s(Youtube:不良林)
       - 🇨🇳 中国-4.37MB/s(Youtube:不良林)
+      - 塞浦路斯-451.4KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇦🇺 澳大利亚-1.78MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.52MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.93MB/s(Youtube:不良林)
-      - 🇩🇪 德国-3.07MB/s(Youtube:不良林)
       - 🇨🇳 中国-503.2KB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.38MB/s(Youtube:不良林)
+      - 🇨🇳 中国-413.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-327.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.33MB/s(Youtube:不良林)
+      - 🇺🇸 美国-428.9KB/s(Youtube:不良林)
       - 🇫🇷 法国-1.43MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-555.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.83MB/s(Youtube:不良林)
       - 🇨🇳 中国-4.37MB/s(Youtube:不良林)
+      - 塞浦路斯-451.4KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇦🇺 澳大利亚-1.78MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.52MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.93MB/s(Youtube:不良林)
-      - 🇩🇪 德国-3.07MB/s(Youtube:不良林)
       - 🇨🇳 中国-503.2KB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.38MB/s(Youtube:不良林)
+      - 🇨🇳 中国-413.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-327.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.33MB/s(Youtube:不良林)
+      - 🇺🇸 美国-428.9KB/s(Youtube:不良林)
       - 🇫🇷 法国-1.43MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-555.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.83MB/s(Youtube:不良林)
       - 🇨🇳 中国-4.37MB/s(Youtube:不良林)
+      - 塞浦路斯-451.4KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇦🇺 澳大利亚-1.78MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.52MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.93MB/s(Youtube:不良林)
-      - 🇩🇪 德国-3.07MB/s(Youtube:不良林)
       - 🇨🇳 中国-503.2KB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.38MB/s(Youtube:不良林)
+      - 🇨🇳 中国-413.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-327.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.33MB/s(Youtube:不良林)
+      - 🇺🇸 美国-428.9KB/s(Youtube:不良林)
       - 🇫🇷 法国-1.43MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-555.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.83MB/s(Youtube:不良林)
       - 🇨🇳 中国-4.37MB/s(Youtube:不良林)
+      - 塞浦路斯-451.4KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
